# fennec

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  action-menu.html  index.html  package.json  settings.html  vite.config.ts
assets/: icon.icns
fennec-tap/: Cargo.toml  build.rs
fennec-tap/src/: accel_iokit.c  accelerometer.rs  main.rs  tap_detector.rs
scripts/: install.sh  release.sh  test_ax  test_ax.rs  test_ax.swift  test_ax_swift
src/: action-menu.ts  actions.ts  ai.ts  config.ts  loader.html  main.ts  popup.html  settings.html  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  ax.rs  clipboard.rs  config.rs  lib.rs  tap_listener.rs
