[package]
name = "fennec"
version = "0.5.7"
description = "AI-powered text correction for macOS"
authors = ["andreamazzatxt"]
edition = "2021"

[lib]
name = "fennec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = "0.4"
accessibility-sys = "0.2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
core-foundation = "0.10"
macos-accessibility-client = "0.0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSMenu", "NSMenuItem", "NSEvent", "NSPopover", "NSWorkspace"] }
objc2-foundation = "0.3"
